[package]
name = "xenv"
version = "0.2.0"
authors = ["silver-panda <ladysamantha@protonmail.com>"]
edition = "2018"
description = "A cross-shell env sourcing command"
license = "GPL-3.0"
keywords = ["env", "cli", "cross-env"]
repository = "https://github.com/silver-panda/xenv"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.0"
